force-app/main/default/objects/Dev_Forum__c/Dev_Forum__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Forum</label>
    <nameField>
        <displayFormat>DEV_FOR_{0000}</displayFormat>
        <label>Forum ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Forums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>