force-app/main/default/objects/Dev_Forum__c/fields/Developer_Focused__c.field-meta.xml
<CustomField>
    <fullName>Developer_Focused__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Captures details about whether a forum is developer focused or not</description>
    <label>Developer Focused</label>
    <type>Checkbox</type>
</CustomField>