force-app/main/default/objects/Dev_Forum__c/fields/Forum_Name__c.field-meta.xml
<CustomField>
    <fullName>Forum_Name__c</fullName>
    <label>Forum Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>