force-app/main/default/objects/Dev_Forum__c/fields/Top_Category__c.field-meta.xml
<CustomField>
    <fullName>Top_Category__c</fullName>
    <label>Top Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>