force-app/main/default/objects/Dev_Forum__c/fields/Top_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Top_Category_ID__c</fullName>
    <label>Top Category ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>