force-app/main/default/objects/Dev_Forum__c/fields/Topic_ID__c.field-meta.xml
<CustomField>
    <fullName>Topic_ID__c</fullName>
    <description>Unique Identifier from source for a Forum record</description>
    <externalId>true</externalId>
    <label>Topic ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>