force-app/main/default/objects/Dev_Forum__c/fields/Topic_name_Full__c.field-meta.xml
<CustomField>
    <fullName>Topic_name_Full__c</fullName>
    <label>Topic Name (full)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>