force-app/main/default/objects/Dev_Forum__c/fields/Topic_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name_Short__c</fullName>
    <label>Topic Name (short)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>